# transactional_sqlalchemy

./: .gitignore  .pre-commit-config.yaml  README.md  info.py  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yml  publish-with-uv.yaml  test.yml
src/: __init__.py  config.py  interface.py  transactional.py  utils.py
src/transactional_sqlalchemy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_base_002.py  test_domains.py  test_repository_base_edge_cases.py  test_transaction_util.py  test_wrapper_common.py
tests/async_env/: conftest.py  test_async_repository.py  test_composite_key_repository.py  test_flush.py  test_nested_transactional.py  test_repository_base.py  test_repository_base_nested.py  test_repository_base_requires.py  test_repository_base_requires_new.py  test_session_stack_utils.py
tests/factories/: composite_key_factory.py  post_factory.py  sample_model_factory.py
tests/helpers/: assertions.py  base_test.py
tests/sync_env/: conftest.py  test_sync_repository.py
transactional_sqlalchemy/: __init__.py  config.py  domains.py  enums.py  interface.py  transactional.py  utils.py  wrapper.py
transactional_sqlalchemy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
transactional_sqlalchemy/decorator/: transactional.py
transactional_sqlalchemy/repository/: base.py
transactional_sqlalchemy/utils/: transaction_util.py  utils.py
transactional_sqlalchemy/wrapper/: async_wrapper.py  common.py  sync_wrapper.py
